# Django-x-Fast-Api-Projects

amigos_fast/: main.py  models.py
amigos_fast/amigos/Scripts/: activate  activate.bat
blog_manager/blog/Scripts/: activate  activate.bat
blog_manager/mysite/: db.sqlite3  mysite_data.json
blog_manager/mysite/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
blog_manager/mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py  0004_post_tags.py
blog_manager/mysite/blog/templates/blog/: base.html
blog_manager/mysite/blog/templates/blog/post/: detail.html  list.html  search.html
blog_manager/mysite/blog/templatetags/: blog_tags.py
blog_manager/mysite/mysite/: asgi.py  settings.py  urls.py
fast_api_lms/: main.py  pyproject.toml
fast_api_lms/api/: courses.py  sections.py  users.py
fast_api_lms/db/: db_setup.py
fast_api_lms/db/models/: user.py
socialweb/bookmarks/: db.sqlite3
socialweb/bookmarks/account/: admin.py  forms.py  models.py  urls.py  views.py
socialweb/bookmarks/account/migrations/: 0001_initial.py
socialweb/bookmarks/account/templates/: base.html
socialweb/bookmarks/account/templates/account/: dashboard.html
socialweb/bookmarks/account/templates/registration/: login.html
socialweb/bookmarks/bookmarks/: settings.py  urls.py
socialweb/env/bookmarks/Scripts/: activate  activate.bat
