[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["fabian ombui"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
pydantic = "^2.1.1"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
